# imc-pytorch

./: .gitignore  Audio Test.ipynb  audio.py  main.py  pyproject.toml
src/imclab/: data.py  model.py  preprocessing.py  train.py
