[tool.poetry]
name = "imc-pytorch"
version = "0.1.0"
description = ""
authors = ["kureta <skureta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
lightning = {extras = ["pytorch-extra"], version = "^2.1.3"}
jsonargparse = {extras = ["signatures"], version = "^4.27.1"}
matplotlib = "^3.8.2"
jupyterlab = "^4.0.9"
tensorboard = "^2.15.1"
torchaudio = "^2.1.2"
librosa = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
